# lemon_home

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  seed_data.py  start_web.ps1  start_web.sh
.claude/: settings.json  settings.local.json
docs/superpowers/plans/: 2026-03-18-rent-calendar.md
docs/superpowers/specs/: 2026-03-18-rent-calendar-design.md
src/lemon_home/: cli.py  models.py  store.py  web.py
src/lemon_home/static/: app.css
src/lemon_home/templates/: base.html  bill_index.html  contract_create.html  contract_manage.html  dashboard.html  house_detail.html  house_edit.html  house_form.html  house_manage.html  lease_detail.html  rent_calendar.html  tag_manage.html  tenant_manage.html
src/lemon_home/templates/partials/: gantt_body.html  house_hero.html  lease_summary_card.html  media_list.html  tag_editor.html  tag_list.html  tenant_list.html
