[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lemon-home"
version = "0.1.0"
description = "Agent-friendly apartment management CLI backed by local files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
lemon-home = "lemon_home.cli:app"
lemon-home-web = "lemon_home.web:run"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
